initiation du front

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Adaction</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>Adaction</h1>
+    </header>
+    <form method="GET">
+        <label>
+            <h2>Vous êtes :</h2>
+        </label>
+        <input type="select"></input>
+        <button type="submit">Entrer</button>
+    </form>
 </body>
+
 </html>
