--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adaction</title>
+    <script defer src="../js/index.js"></script>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
         <label>
             <h2>Vous êtes :</h2>
         </label>
-        <input type="select"></input>
+        <input type="select" id="userSelector"></input>
         <button type="submit">Entrer</button>
     </form>
 </body>
