création de la boucle et du selecteur sur index.html

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -16,7 +16,7 @@
         <label>
             <h2>Vous êtes :</h2>
         </label>
-        <input type="select" id="userSelector"></input>
+        <select type="select" id="userSelector"></select>
         <button type="submit">Entrer</button>
     </form>
 </body>
