--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -14,7 +14,7 @@
     </header>
     <form method="GET">
         <label>
-            <h2>Vous êtes :</h2>
+            <h2>Vous êtes</h2>
         </label>
         <select type="select" id="userSelector"></select>
         <button type="submit">Entrer</button>
