tentative de connexion entre les paramètres du formulaire Index, avec la page tableau de bord bénévole

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -12,11 +12,11 @@
     <header>
         <h1>Adaction</h1>
     </header>
-    <form method="GET">
+    <form method="GET" >
         <label>
             <h2>Vous êtes</h2>
         </label>
-        <select type="select" id="userSelector"></select>
+        <select type="select" name="userId" id="userSelector"></select>
         <button type="submit">Entrer</button>
     </form>
 </body>
