--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adaction - tableau de bord</title>
+    <script defer src="../js/volunteers.js"></script>
 </head>
 
 <body>
