--- a/frontend/html/charity.html
+++ b/frontend/html/charity.html
@@ -1,11 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adaction - admin</title>
+     <link rel="stylesheet" href="/CSS/style.css">
+     <script defer src="../js/charity.js"></script>
+     
+    <title>Adaction</title>
 </head>
+
 <body>
-    
-</body>
+    <header>
+        <h1>Adaction - Liste de nos partenauires</h1>
+    </header>
+    <h2>LPO</h2>
+    <h3>La Ligue pour la Protection des Oiseaux (LPO) est une association française de protection de la nature, créée en
+        1912.</h3>
+
+    <h2>ASPAS</h2>
+    <h3>Association pour la Protection des Animaux Sauvages (ASPAS) est une association française de protection de la
+        nature, créée en 2001.</h3>
+
+    <h2>FNE</h2>
+    <h3>France Nature Environnement (FNE) est une fédération française d'associations de protection de la nature, créée
+        en 1968.</h3>
+
+    <h2>WWF</h2>
+    <h3>Le Fonds mondial pour la nature (WWF) est une organisation non gouvernementale internationale de protection de
+        l'environnement, créée en 1961.</h3>
+
+    <h2>IUCN</h2>
+    <h3>L'Union internationale pour la conservation de la nature (IUCN) est une organisation internationale, créée en
+        1948, qui regroupe des États, des agences gouvernementales et des organisations non gouvernementales.</h3>
+
+</body>ƒ
+
+<footer id="end">
+    <!-- Informations générales site + lien autres pages -->
+    <h4>ADAOPTE</h4>
+    <h5>Notre mission est de trouver des foyers aimants pour <br> chaque animal abandoné et de promouvoir le
+        bien-être <br> animal.</h5>
+    <div>
+        <a href="https://www.facebook.com/?locale=fr_FR"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" class="lucide lucide-facebook-icon lucide-facebook">
+                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
+            </svg></a>
+        <a href="https://www.instagram.com/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" class="lucide lucide-instagram-icon lucide-instagram">
+                <rect width="20" height="20" x="2" y="2" rx="5" ry="5" />
+                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
+                <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
+            </svg></a>
+        <a href="https://www.linkedin.com/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" class="lucide lucide-linkedin-icon lucide-linkedin">
+                <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
+                <rect width="4" height="12" x="2" y="9" />
+                <circle cx="4" cy="4" r="2" />
+            </svg></a>
+        <a href="https://www.twitch.tv/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" class="lucide lucide-twitch-icon lucide-twitch">
+                <path d="M21 2H3v16h5v4l4-4h5l4-4V2zm-10 9V7m5 4V7" />
+            </svg></a>
+    </div>
+
+    <h4>INFORMATIONS UTILES</h4>
+    <div>
+        <a href="">FAQs</a> <br>
+        <a href="">Conseil d'adoption</a> <br>
+        <a href="">Nous contacter</a> <br>
+        <a href="">Mentions légales</a> <br>
+    </div>
+
+    <h4>CONTACT</h4>
+    <p>116 Rue du Faubourg Saint-Martin <br> 75010 Paris, France <br> Email: contact@adaopte.fr <br> Tél:
+        +33 1 23 45 67 89
+    </p>
+
+    <h6> © 2025 Adaopte. Tous droits réservés.</h6>
+    <h6>Ce site a été développé dans le cadre d'un projet pour ADA Tech School. </h6>
+
+</footer>
+
 </html>
