update: reprise du DOM pour faire fonctionner le formulaire avec les pages de connexion

--- a/frontend/html/charity.html
+++ b/frontend/html/charity.html
@@ -7,12 +7,12 @@
      <link rel="stylesheet" href="/CSS/style.css">
      <script defer src="../js/charity.js"></script>
      
-    <title>Adaction</title>
+    <title>Adaction - partenaires</title>
 </head>
 
 <body>
     <header>
-        <h1>Adaction - Liste de nos partenauires</h1>
+        <h1>Adaction - Liste de nos partenaires</h1>
     </header>
     <h2>LPO</h2>
     <h3>La Ligue pour la Protection des Oiseaux (LPO) est une association française de protection de la nature, créée en
