--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -30,8 +30,10 @@
         </nav>
     </div>
 </body>
+
+<!-- 
  <footer id="end">
-            <!-- Informations générales site + lien autres pages -->
+            Informations générales site + lien autres pages
             <h4>ADAOPTE</h4>
             <h5>Notre mission est de trouver des foyers aimants pour <br> chaque animal abandoné et de promouvoir le
                 bien-être <br> animal.</h5>
@@ -80,4 +82,6 @@
             <h6>Ce site a été développé dans le cadre d'un projet pour ADA Tech School. </h6>
 
         </footer>
+ -->
+
 </html>
