--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -7,10 +7,52 @@
     <title>Adaction - Administration</title>
     <script defer src="../js/admin.js"></script>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/dashboard.css">
 </head>
 
 <body>
     <header>
         <h1>Adaction - Administration</h1>
     </header>
+    <div>
+        <h2><span id="userSpan">[User]</span>, voici votre tableau de bord</h2>
+        <div id="tableContainer">
+            <table>
+                <tr>
+                    <th>Noms</th>
+                    <th>Ville</th>
+                    <th>Inscrit.e le</th>
+                    <th>Editer</th>
+                </tr>
+                <tr>
+                    <th>Pépé Pou</th>
+                    <th>Marseille</th>
+                    <th>24/09/2025</th>
+                    <th><button>✏️</button></th>
+                </tr>
+                <tr>
+                    <th>Jean Dupont</th>
+                    <th>Lyon</th>
+                    <th>12/11/2023</th>
+                    <th><button>✏️</button></th>
+                </tr>
+                <tr>
+                    <th>Marie Curie</th>
+                    <th>Paris</th>
+                    <th>05/06/2022</th>
+                    <th><button>✏️</button></th>
+                </tr>
+                <tr>
+                    <th>Albert Einstein</th>
+                    <th>Toulouse</th>
+                    <th>19/03/2024</th>
+                    <th><button>✏️</button></th>
+                </tr>
+            </table>
+        </div>
+        <nav>
+            <a href="index.html"><button>🏠 Accueil</button></a>
+            <a href=""><button>➕ Déclarer une nouvelle collecte</button></a>
+        </nav>
+    </div>
 </body>
