correction du bouton ajout d'un bénévole sur admin.html

--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -52,7 +52,7 @@
         </div>
         <nav>
             <a href="index.html"><button>🏠 Accueil</button></a>
-            <a href=""><button>➕ Déclarer une nouvelle collecte</button></a>
+            <a href=""><button>➕ Ajouter un.e bénévole</button></a>
         </nav>
     </div>
 </body>
