avancée du html et css

--- a/frontend/html/charity.html
+++ b/frontend/html/charity.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="/CSS/style.css">
+     <link rel="stylesheet" href="../css/styles.css"> 
      <script defer src="../js/charity.js"></script>
      
     <title>Adaction - partenaires</title>
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>Adaction - Liste de nos partenaires</h1>
+         <h1 id="homeIcon">Ada<span class="enceColor">ction</span></h1>
     </header>
     <h2>LPO</h2>
     <h3>La Ligue pour la Protection des Oiseaux (LPO) est une association française de protection de la nature, créée en
@@ -34,12 +34,16 @@
     <h3>L'Union internationale pour la conservation de la nature (IUCN) est une organisation internationale, créée en
         1948, qui regroupe des États, des agences gouvernementales et des organisations non gouvernementales.</h3>
 
-</body>ƒ
+</body>
 
 <footer id="end">
+
+
     <!-- Informations générales site + lien autres pages -->
     <h4>ADAOPTE</h4>
-    <h5>Notre mission est de trouver des foyers aimants pour <br> chaque animal abandoné et de promouvoir le
+    <div class="footer-colonne">
+
+    <h5 class=""footer-title >Notre mission est de trouver des foyers aimants pour <br> chaque animal abandoné et de promouvoir le
         bien-être <br> animal.</h5>
     <div>
         <a href="https://www.facebook.com/?locale=fr_FR"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -48,7 +52,8 @@
                 <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
             </svg></a>
         <a href="https://www.instagram.com/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                viewBox="0 0 24 24" fill="none" strok
+                e="currentColor" stroke-width="2" stroke-linecap="round"
                 stroke-linejoin="round" class="lucide lucide-instagram-icon lucide-instagram">
                 <rect width="20" height="20" x="2" y="2" rx="5" ry="5" />
                 <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
