--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adaction</title>
     <script defer src="../js/index.js"></script>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css"> 
+   
+    <title>Adaction</title>
 </head>
 
 <body>
     <header>
-        <h1>Adaction</h1>
+
+        <h1 id="homeIcon">Ada<span class="enceColor">ction</span></h1>
+
     </header>
     <form id="userForm" method="GET">
         <label>
