--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adaction - tableau de bord</title>
     <script defer src="../js/volunteers.js"></script>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../css/styles.css"> 
     <link rel="stylesheet" href="../css/dashboard.css">
 </head>
 
 <body>
     <header>
-        <h1>Adaction</h1>
+         <h1 id="homeIcon">Ada<span class="enceColor">ction</span></h1>
     </header>
     <div>
         <h2><span id="userSpan">[User]</span>, voici votre tableau de bord</h2>
