--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -17,7 +17,7 @@
     <div>
         <h2><span id="userSpan">[User]</span>, voici votre tableau de bord</h2>
         <div id="tableContainer">
-            <table>
+            <table id="collectTable">
                 <tr>
                     <th>Date</th>
                     <th>Ville</th>
