--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adaction - Administration</title>
     <script defer src="../js/admin.js"></script>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/dashboard.css">
 </head>
 
@@ -17,36 +17,15 @@
     <div>
         <h2><span id="userSpan">[User]</span>, voici votre tableau de bord</h2>
         <div id="tableContainer">
-            <table>
+            <table id="adminTable">
                 <tr>
                     <th>Noms</th>
                     <th>Ville</th>
+                    <th>Mail</th>
+                    <th>Score</th>
                     <th>Inscrit.e le</th>
+                    <th>Admin</th>
                     <th>Editer</th>
-                </tr>
-                <tr>
-                    <th>Pépé Pou</th>
-                    <th>Marseille</th>
-                    <th>24/09/2025</th>
-                    <th><button>✏️</button></th>
-                </tr>
-                <tr>
-                    <th>Jean Dupont</th>
-                    <th>Lyon</th>
-                    <th>12/11/2023</th>
-                    <th><button>✏️</button></th>
-                </tr>
-                <tr>
-                    <th>Marie Curie</th>
-                    <th>Paris</th>
-                    <th>05/06/2022</th>
-                    <th><button>✏️</button></th>
-                </tr>
-                <tr>
-                    <th>Albert Einstein</th>
-                    <th>Toulouse</th>
-                    <th>19/03/2024</th>
-                    <th><button>✏️</button></th>
                 </tr>
             </table>
         </div>
