--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adaction - tableau de bord</title>
     <script defer src="../js/volunteers.js"></script>
-    <link rel="stylesheet" href="../css/styles.css"> 
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/dashboard.css">
 </head>
 
@@ -17,42 +17,12 @@
     <div>
         <h2><span id="userSpan">[User]</span>, voici votre tableau de bord</h2>
         <div id="tableContainer">
-            <table id="collectTable">
+            <table id="collectsTable">
                 <tr>
-                    <th>Date</th>
                     <th>Ville</th>
+                    <th>Date</th>
                     <th>Score</th>
-                    <th>Détails</th>
-                </tr>
-                <tr>
-                    <th>24/09/2025</th>
-                    <th>Marseille</th>
-                    <th>550</th>
-                    <th><button>🔍</button></th>
-                </tr>
-                <tr>
-                    <th>12/11/2023</th>
-                    <th>Lyon</th>
-                    <th>430</th>
-                    <th><button>🔍</button></th>
-                </tr>
-                <tr>
-                    <th>05/06/2022</th>
-                    <th>Paris</th>
-                    <th>300</th>
-                    <th><button>🔍</button></th>
-                </tr>
-                <tr>
-                    <th>19/03/2024</th>
-                    <th>Toulouse</th>
-                    <th>620</th>
-                    <th><button>🔍</button></th>
-                </tr>
-                <tr>
-                    <th>15/08/2023</th>
-                    <th>Nice</th>
-                    <th>480</th>
-                    <th><button>🔍</button></th>
+                    <th>Voir</th>
                 </tr>
             </table>
         </div>
