--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -8,13 +8,14 @@
     <script defer src="../js/volunteers.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/dashboard.css">
+    <link rel="stylesheet" href="../css/form.css">
 </head>
 
 <body>
     <header>
         <h1 id="homeIcon">Ada<span class="enceColor">ction</span></h1>
     </header>
-    <div>
+    <div id="dashboard"> <!-- Display none après le clic sur [Déclarer une nouvelle collecte] -->
         <h2><span id="userSpan">[User]</span>, voici votre tableau de bord</h2>
         <div id="tableContainer">
             <table id="collectsTable">
@@ -30,10 +31,18 @@
             <a href="index.html"><button>🏠 Accueil</button></a>
             <a href=""><button>➕ Déclarer une nouvelle collecte</button></a>
         </div>
-        <form>
-            <label for="collectCity">Ville de la collecte</label>
-            <select type="select" name="collectCity" id="citySelector"></select>
-        </form>
+
+        <div id="newCollectForm"> <!-- display:none de base-->
+            <h2>Nouvelle collecte</h2>
+            <form>
+                <label for="collectCity">Ville de la collecte</label>
+                <select type="select" name="collectCity" id="citySelector"></select></br>
+                <label for="collectDate">Date de la collecte</label>
+                <input type="date" name="collectDate" id="collectDate">
+                <div id="trashButtonsContainer"></div>
+                <button type="submit">Enregistrer la collecte</button>
+            </form>
+        </div>
     </div>
 
     <footer id="end">
