--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="../js/index.js"></script>
+    <script type="module" defer src="../js/index.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
 
     <title>Adaction</title>
