update : envoi des data sur collect + collected_trash

--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -48,7 +48,7 @@
 
     <div id="newCollectForm"> <!-- display:none de base-->
         <h2>Nouvelle collecte</h2>
-        <form>
+        <form id="newCollectFormElem">
             <label for="collectCity">Ville de la collecte</label>
             <select type="select" name="collectCity" id="citySelector"><!-- volunteers.js --></select></br>
             <label for="collectDate">Date de la collecte</label>
