add: affichage des détails de collecte dans le dashboard user

--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -13,9 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&family=Quicksand:wght@300..700&display=swap"
         rel="stylesheet">
-
-    <script defer src="../js/index.js"></script>
-    <script defer src="../js/volunteers.js"></script>
+    <script defer type="module" src="../js/volunteers.js"></script>
 
     <title>Adaction - Bénévole</title>
 </head>
@@ -34,8 +32,11 @@
                 <tr>
                     <th>Ville</th>
                     <th>Date</th>
-                    <th>Score</th>
-                    <th>Voir</th>
+                    <th>🚬 Mégots</th>
+                    <th>🥤 Emballages</th>
+                    <th>🍾 Bouteilles</th>
+                    <th>🎣 Matériel de pêche</th>
+                    <th>🥫 Objets métalliques</th>
                 </tr>
                 <!-- volunteers.js -->
             </table>
