--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -7,8 +7,7 @@
 
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/dashboard.css">
-    <script defer src="../js/index.js"></script>
-    <script defer src="../js/admin.js"></script>
+    <script defer type="module" src="../js/admin.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
