--- a/frontend/html/charity.html
+++ b/frontend/html/charity.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     
-    <script defer src="../js/index.js"></script>
+    <script defer type="module" src="../js/index.js"></script>
 
     <title>Adaction</title>
 </head>
