--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -21,9 +21,43 @@
             <h1 id="homeIcon">Ada<span class="enceColor">ction</span></h1>
         </a>
     </header>
+
+    <div id="partners">
+
+        <h2>Bienvenue !</h2>
+<p>Notre association existe depuis 2019 et a pour objectif d'accompagner les adhérents dans l'organisation de collectes de déchets dans leurs villes.
+    Voici la liste des partenaires qui nous font confiance et à qui nous versons une partie des bénéfices de nos collectes :
+</p>
+
+        <h2>LPO</h2>
+        <h3>La Ligue pour la Protection des Oiseaux (LPO) est une association française de protection de la nature,
+            créée en
+            1912.</h3>
+
+        <h2>ASPAS</h2>
+        <h3>Association pour la Protection des Animaux Sauvages (ASPAS) est une association française de protection de
+            la
+            nature, créée en 2001.</h3>
+
+        <h2>FNE</h2>
+        <h3>France Nature Environnement (FNE) est une fédération française d'associations de protection de la nature,
+            créée
+            en 1968.</h3>
+
+        <h2>WWF</h2>
+        <h3>Le Fonds mondial pour la nature (WWF) est une organisation non gouvernementale internationale de protection
+            de
+            l'environnement, créée en 1961.</h3>
+
+        <h2>IUCN</h2>
+        <h3>L'Union internationale pour la conservation de la nature (IUCN) est une organisation internationale, créée
+            en
+            1948, qui regroupe des États, des agences gouvernementales et des organisations non gouvernementales.</h3>
+    </div>
+
     <form id="userForm" method="GET">
         <label>
-            <h2>Sélectionnez votre profil</h2>
+            <h4>Vous êtes déjà membre ? Sélectionnez votre profil</h2>
         </label>
         <select type="select" name="userId" id="userSelector">
             <!-- index.js -->
