formulaire d'ajout d'un utilisateur

--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -51,12 +51,17 @@
         <div id="newVolunteerForm"> <!-- display:none de base-->
             <h2>Nouveau bénévole</h2>
             <form id="newVolunteerFormElem">
-                <label for="volunteerName">Nom du bénévole</label>
-                <input type="text" name="volunteerName" id="volunteerName" required></br>
+                <label for="volunteerFirstName">Nom du bénévole</label>
+                <input type="text" name="volunteerFirstName" id="volunteerFirstName" required></br>
+                <label for="volunteerLastName">Prénom du bénévole</label>
+                <input type="text" name="volunteerLastName" id="volunteerLastName" required></br>
                 <label for="volunteerEmail">Email du bénévole</label>
                 <input type="email" name="volunteerEmail" id="volunteerEmail" required></br>
                 <label for="volunteerCity">Ville du bénévole</label>
-                <select type="select" name="volunteerCity" id="citySelector"><!-- volunteers.js --></select></br>
+                <select type="select" name="volunteerCity" id="citySelector" required>
+                    <option value="">-- Sélectionner une ville --</option>
+                    <!-- volunteers.js -->
+                </select></br>
                 <label for="isAdminCheckbox">Est un administrateur ?</label>
                 <input type="checkbox" id="isAdminCheckbox"></br>
                 <div id="trashButtonsContainer"><!-- volunteers.js --></div>
