--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -43,7 +43,9 @@
         </div>
         <div>
             <a href="index.html"><button>🏠 Accueil</button></a>
-            <button id="declareCollectButton" onclick="document.getElementById('dashboard').style.display = 'none'; document.getElementById('newCollectForm').style.display = 'flex';">➕ Déclarer une nouvelle collecte</button>
+            <button id="declareCollectButton"
+                onclick="document.getElementById('dashboard').style.display = 'none'; document.getElementById('newCollectForm').style.display = 'flex';">➕
+                Déclarer une nouvelle collecte</button>
         </div>
     </div>
 
@@ -51,7 +53,10 @@
         <h2>Nouvelle collecte</h2>
         <form id="newCollectFormElem">
             <label for="collectCity">Ville de la collecte</label>
-            <select type="select" name="collectCity" id="citySelector"><!-- volunteers.js --></select></br>
+            <select type="select" name="collectCity" id="citySelector">
+                <option value="">-- Sélectionner une ville --</option>
+                <!-- volunteers.js -->
+            </select></br>
             <label for="collectDate">Date de la collecte</label>
             <input type="date" name="collectDate" id="collectDate">
             <div id="trashButtonsContainer"><!-- volunteers.js --></div>
