fix : réparation du bouton cancel

--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -65,7 +65,7 @@
                 <label for="isAdminCheckbox">Est un administrateur ?</label>
                 <input type="checkbox" id="isAdminCheckbox"></br>
                 <div id="trashButtonsContainer"><!-- volunteers.js --></div>
-                <button type="button" id="cancelButton" onclick="reloadPage()">Annuler</button>
+                <button type="button" id="cancelButton">Annuler</button>
                 <button type="submit">Enregistrer la collecte</button>
             </form>
         </div>
