--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -60,7 +60,7 @@
             <label for="collectDate">Date de la collecte</label>
             <input type="date" name="collectDate" id="collectDate">
             <div id="trashButtonsContainer"><!-- volunteers.js --></div>
-            <button type="button" id="cancelButton" onclick="reloadPage()">Annuler</button>
+            <button type="button" id="cancelButton">Annuler</button>
             <button type="submit">Enregistrer la collecte</button>
         </form>
     </div>
