mise en page des classes plus et minus

--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <div id="newCollectForm"> <!-- display:none de base-->
+    <div id="newCollectForm" style="display: none;"> <!-- display:none de base-->
         <h2>Nouvelle collecte</h2>
         <form id="newCollectFormElem">
             <label for="collectCity">Ville de la collecte</label>
