--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -4,24 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="../css/styles.css">
     <script defer type="module" src="../js/admin.js"></script>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&family=Quicksand:wght@300..700&display=swap"
-        rel="stylesheet">
-
-
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&display=swap');
+    </style>
     <title>Adaction - Administration</title>
 </head>
 
 <body>
     <header>
         <a href="index.html">
-            <h1 id="homeIcon">Ada<span class="enceColor">ction</span></h1>
+            <h1 id="homeIcon">ADA<span class="enceColor">CTION</span></h1>
         </a>
     </header>
 
@@ -40,7 +34,7 @@
                 <!-- admin.js -->
             </table>
         </div>
-        
+
         <div>
             <a href="index.html"><button>🏠 Accueil</button></a>
             <button id="addVolunteerButton"
@@ -49,7 +43,7 @@
         </div>
 
         <div id="newVolunteerForm"> <!-- display:none de base-->
-            <form id="newVolunteerFormElem"> 
+            <form id="newVolunteerFormElem">
                 <label for="volunteerFirstName">Nom du bénévole</label>
                 <input type="text" name="volunteerFirstName" id="volunteerFirstName" required></br>
                 <label for="volunteerLastName">Prénom du bénévole</label>
