--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -6,30 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" defer src="../js/index.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&family=Quicksand:wght@300..700&display=swap"
-        rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&display=swap');
+    </style>
     <title>Adaction</title>
 </head>
 
 <body>
     <header>
         <a href="#">
-            <h1 id="homeIcon">Ada<span class="enceColor">ction</span></h1>
+            <h1 id="homeIcon">ADA<span class="enceColor">CTION</span></h1>
         </a>
     </header>
 
     <div id="partners">
 
         <h2>Bienvenue !</h2>
-<h3> Notre association existe depuis 2019 et a pour objectif d'accompagner les adhérents dans l'organisation de collectes de déchets dans leurs villes.
-    Voici la liste des partenaires qui nous font confiance et à qui nous versons une partie des bénéfices de nos collectes :
-</h3>
+        <h3> Notre association existe depuis 2019 et a pour objectif d'accompagner les adhérents dans l'organisation de
+            collectes de déchets dans leurs villes.
+            Voici la liste des partenaires qui nous font confiance et à qui nous versons une partie des bénéfices de nos
+            collectes :
+        </h3>
 
-        <h2>LPO <img src="frontend/html/pictures/Logo_LPO.jpg" alt="Logo LPO Birdlife France" class="logo-association"></h2>
+        <h2>LPO <img src="frontend/html/pictures/Logo_LPO.jpg" alt="Logo LPO Birdlife France" class="logo-association">
+        </h2>
         <p>La Ligue pour la Protection des Oiseaux (LPO) est une association française de protection de la nature,
             créée en
             1912.</p>
