--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -4,29 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="../css/styles.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&family=Quicksand:wght@300..700&display=swap"
-        rel="stylesheet">
     <script defer type="module" src="../js/volunteers.js"></script>
-
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&display=swap');
+    </style>
     <title>Adaction - Bénévole</title>
 </head>
 
 <body>
     <header>
         <a href="index.html">
-            <h1 id="homeIcon">Ada<span class="enceColor">ction</span></h1>
+            <h1 id="homeIcon">ADA<span class="enceColor">CTION</span></h1>
         </a>
     </header>
 
     <div id="dashboard"> <!-- Display none après le clic sur [Déclarer une nouvelle collecte] -->
         <h2><span id="userSpan">[User]</span>, voici votre tableau de bord</h2> <!-- volunteers.js -->
-       
+
         <div id="tableContainer">
             <table id="collectsTable">
                 <tr>
