--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <script defer type="module" src="../js/volunteers.js"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swap');
     </style>
     <title>Adaction - Bénévole</title>
 </head>
