finalisation du css

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -22,25 +22,14 @@
     <div id="partners">
 
         <h2>Bienvenue !</h2>
-        <<<<<<< HEAD <h3> Notre association existe depuis 2019 et a pour objectif d'accompagner les adhérents dans
+        <h3> Notre association existe depuis 2019 et a pour objectif d'accompagner les adhérents dans
             l'organisation de
             collectes de déchets dans leurs villes.
             Voici la liste des partenaires qui nous font confiance et à qui nous versons une partie des bénéfices de nos
             collectes :
             </h3>
-
-            <h2>LPO <img src="frontend/html/pictures/Logo_LPO.jpg" alt="Logo LPO Birdlife France"
-                    class="logo-association">
-            </h2>
-            =======
-            <h3> Notre association existe depuis 2019 et a pour objectif d'accompagner les adhérents dans l'organisation
-                de collectes de déchets dans leurs villes.
-                Voici la liste des partenaires qui nous font confiance et à qui nous versons une partie des bénéfices de
-                nos collectes :
-            </h3>
             <div class="partner-logos">
                 <h2> LPO <img src="pictures/Logo_LPO.jpg" alt="Logo LPO Birdlife France" class="logo-association"></h2>
-                >>>>>>> 11919876b8df93832f59c4fcaa029fc4fceaea68
                 <p>La Ligue pour la Protection des Oiseaux (LPO) est une association française de protection de la
                     nature,
                     créée en
