--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -44,9 +44,9 @@
 
         <div id="newVolunteerForm"> <!-- display:none de base-->
             <form id="newVolunteerFormElem">
-                <label for="volunteerFirstName">Nom du bénévole</label>
+                <label for="volunteerFirstName">Prénom du bénévole</label>
                 <input type="text" name="volunteerFirstName" id="volunteerFirstName" required></br>
-                <label for="volunteerLastName">Prénom du bénévole</label>
+                <label for="volunteerLastName">Nom du bénévole</label>
                 <input type="text" name="volunteerLastName" id="volunteerLastName" required></br>
                 <label for="volunteerEmail">Email du bénévole</label>
                 <input type="email" name="volunteerEmail" id="volunteerEmail" required></br>
