fix : intitulés de formulaire

--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -59,7 +59,7 @@
                 <input type="checkbox" id="isAdminCheckbox"></br>
                 <div id="trashButtonsContainer"><!-- volunteers.js --></div>
                 <button type="button" id="cancelButton">Annuler</button>
-                <button type="submit">Enregistrer la collecte</button>
+                <button type="submit">Enregistrer l'utilisateur</button>
             </form>
         </div>
 
