--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -37,9 +37,9 @@
 
         <div>
             <a href="index.html"><button>🏠 Accueil</button></a>
-            <button id="addVolunteerButton"
+            <!-- <button id="addVolunteerButton"
                 onclick="document.getElementById('dashboard').style.display = 'none'; document.getElementById('newVolunteerForm').style.display = 'flex';">➕
-                Ajouter un.e bénévole</button>
+                Ajouter un.e bénévole</button> -->
         </div>
 
         <div id="newVolunteerForm"> <!-- display:none de base-->
