--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a href="index.html">
+        <a href="../index.html">
             <h1 id="homeIcon">ADA<span class="enceColor">CTION</span></h1>
         </a>
     </header>
@@ -36,7 +36,7 @@
         </div>
 
         <div>
-            <a href="index.html"><button>🏠 Accueil</button></a>
+            <a href="../index.html"><button>🏠 Accueil</button></a>
             <!-- <button id="addVolunteerButton"
                 onclick="document.getElementById('dashboard').style.display = 'none'; document.getElementById('newVolunteerForm').style.display = 'flex';">➕
                 Ajouter un.e bénévole</button> -->
