--- a/frontend/html/volunteers.html
+++ b/frontend/html/volunteers.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a href="index.html">
+        <a href="../index.html">
             <h1 id="homeIcon">ADA<span class="enceColor">CTION</span></h1>
         </a>
     </header>
@@ -37,7 +37,7 @@
             </table>
         </div>
         <div>
-            <a href="index.html"><button>🏠 Accueil</button></a>
+            <a href="../index.html"><button>🏠 Accueil</button></a>
             <button id="declareCollectButton"
                 onclick="document.getElementById('dashboard').style.display = 'none'; document.getElementById('newCollectForm').style.display = 'flex';">➕
                 Déclarer une nouvelle collecte</button>
