--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" defer src="../js/index.js"></script>
-    <link rel="stylesheet" href="../css/styles.css">
+    <script type="module" defer src="js/index.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swap');
     </style>
@@ -29,29 +29,29 @@
             collectes :
             </h3>
             <div class="partner-logos">
-                <h2> LPO <img src="pictures/Logo_LPO.jpg" alt="Logo LPO Birdlife France" class="logo-association"></h2>
+                <h2> LPO <img src="html/pictures/Logo_LPO.jpg" alt="Logo LPO Birdlife France" class="logo-association"></h2>
                 <p>La Ligue pour la Protection des Oiseaux (LPO) est une association française de protection de la
                     nature,
                     créée en
                     1912.</p>
 
-                <h2> ASPAS <img src="pictures/aspas.jpg" alt="Logo ASPAS" class="logo-association"></h2>
+                <h2> ASPAS <img src="html/pictures/aspas.jpg" alt="Logo ASPAS" class="logo-association"></h2>
                 <p>Association pour la Protection des Animaux Sauvages (ASPAS) est une association française de
                     protection de
                     la
                     nature, créée en 2001.</p>
 
-                <h2> FNE <img src="pictures/FNE.jpg" alt="Logo FNE" class="logo-association"></h2>
+                <h2> FNE <img src="html/pictures/FNE.jpg" alt="Logo FNE" class="logo-association"></h2>
                 <p>France Nature Environnement (FNE) est une fédération française d'associations de protection de la
                     nature,
                     créée en 1968.</p>
 
-                <h2> WWF <img src="pictures/WWF.jpg" alt="Logo WWF" class="logo-association"></h2>
+                <h2> WWF <img src="html/pictures/WWF.jpg" alt="Logo WWF" class="logo-association"></h2>
                 <p>Le Fonds mondial pour la nature (WWF) est une organisation non gouvernementale internationale de
                     protection
                     de l'environnement, créée en 1961.</p>
 
-                <h2> IUCN <img src="pictures/IUCN.jpg" alt="Logo IUCN" class="logo-association"> </h2>
+                <h2> IUCN <img src="html/pictures/IUCN.jpg" alt="Logo IUCN" class="logo-association"> </h2>
                 <p>L'Union internationale pour la conservation de la nature (IUCN) est une organisation internationale,
                     créée
                     en 1948, qui regroupe des États, des agences gouvernementales et des organisations non
