change files directory

--- a/frontend/volunteers.html
+++ b/frontend/volunteers.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
-    <script defer type="module" src="../js/volunteers.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <script defer type="module" src="js/volunteers.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swap');
     </style>
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a href="../index.html">
+        <a href="index.html">
             <h1 id="homeIcon">ADA<span class="enceColor">CTION</span></h1>
         </a>
     </header>
@@ -37,7 +37,7 @@
             </table>
         </div>
         <div>
-            <a href="../index.html"><button>🏠 Accueil</button></a>
+            <a href="index.html"><button>🏠 Accueil</button></a>
             <button id="declareCollectButton"
                 onclick="document.getElementById('dashboard').style.display = 'none'; document.getElementById('newCollectForm').style.display = 'flex';">➕
                 Déclarer une nouvelle collecte</button>
